fixed problem with z-index (links)

--- a/styles/style.css
+++ b/styles/style.css
@@ -21,6 +21,7 @@
   /* чтобы элементы внутри позиционировать абсолютно */
   display: flex;
   background-color: #f2f2f2;
+  /* z-index: -10; */
 }
 /* div {
   border: 2px solid red;
@@ -29,7 +30,7 @@
 .logo {
   height: 32px;
   width: 228px;
-  z-index: 1;
+  z-index: 10;
 }
 .logo_place_header {
   position: absolute;
@@ -40,23 +41,24 @@
   width: 730px;
   align-self: center;
   margin-left: 64px;
-  z-index: 1;
+  z-index: 10;
   line-height: 96px;
   font-size: 102px;
   font-weight: 600;
+  position: absolute;
 }
 
 .header__subtitle {
   position: absolute;
   bottom: 30px;
   left: 64px;
-  z-index: 1;
+  z-index: 10;
   width: 388px;
   line-height: 25px;
   font-size: 18px;
   font-weight: normal;
 }
-.header__link {
+ .header__link {
   text-decoration: none;
 }
 .header__main-illustration {
@@ -67,6 +69,7 @@
   right: 0;
   background-image: url(../images/two_again.png);
   background-size: cover;
+  z-index: 1;
 }
 
 .header__square-pic {
@@ -76,7 +79,6 @@
   position: absolute;
   right: 0;
   top: 64px;
-  z-index: -1;
 }
 
 /* и элемента с модификатором вида ключ-значение */
